--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.7",
     "postcss": "^8.4.5",
+    "react-icons": "^4.3.1",
     "tailwindcss": "^3.0.7"
   }
 }
